# mojosplat

./: .gitignore  LICENSE  README.md  mojoproject.toml  pyproject.toml  render_sample.py
examples/: benchmark_proj.py
mojosplat/: binning.py  projection.py  rasterization.py  render.py  utils.mojo  utils.py
mojosplat/examples/: test.mojo
mojosplat/kernels/: __init__.mojo  projection.mojo  rasterization.mojo
tests/: test_binning.py  test_projection_mojo.py  test_rasterization.py  test_render.py
