[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "mojosplat"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.9.0",
    "pillow>=11.2.1, <12",
    "modular==26.1.0",
    "pytest>=8.4.1",
    "gsplat@git+https://github.com/bertaveira/gsplat.git",
    "matplotlib>=3.10.5",
]


# [tool.uv]
# [[tool.uv.index]]
# url = "https://dl.modular.com/public/nightly/python/simple/"


[tool.setuptools]
packages = ["mojosplat"]
